--- a/test.html
+++ b/test.html
@@ -1,6 +1,90 @@
-working
+<style>
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: url("http://www.planwallpaper.com/static/images/general-night-golden-gate-bridge-hd-wallpapers-golden-gate-bridge-wallpaper.jpg") no-repeat center/cover;
+}
 
+.construct-container {
+  position: absolute;
+  opacity: 0.9;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background: #6190E8;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #6190E8, #A7BFE8);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(right, #6190E8, #A7BFE8);
+  background: linear-gradient(to left, #6190E8, #A7BFE8);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.construct-container h1 {
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 4em;
+  color: #fff;
+  word-spacing: 16px;
+}
+.construct-container p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.4em;
+  font-weight: bold;
+  color: #4a4a4a;
+}
 
-1
-2
-3
+.wrapper {
+  width: 100%;
+  min-height: 100%;
+  height: auto;
+  display: table;
+}
+
+.content {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.item {
+  width: auto;
+  height: auto;
+  margin: 0 auto;
+  text-align: center;
+  padding: 8px;
+}
+
+@media only screen and (min-width: 800px) {
+  .construct-container h1 {
+    font-size: 6em;
+  }
+
+  .construct-container p {
+    font-size: 1.6em;
+  }
+}
+@media only screen and (max-width: 320px) {
+  .construct-container h1 {
+    font-size: 2em;
+  }
+
+  .construct-container p {
+    font-size: 1.2em;
+  }
+}
+
+</style>
+<div class="construct-container">
+  <div class="wrapper">
+    <div class="content">
+      <div class="item">
+        <h1>COMING SOON</h1>
+        <p>This website is under construction.</p>
+      </div>
+    </div>
+  </div>
+</div>
